--- a/home.html
+++ b/home.html
@@ -404,10 +404,13 @@
     <p>"Surviving is important but thriving is elegant." - Maya Angelou</p>
   </div>
 
+
   <div class="content" id="cv">
-    <h1>CV</h1>
-    <p>Download my CV <a href="#">here</a>.</p>
-  </div>
+  <h1>CV</h1>
+  <p>Download my CV <a href="https://drive.google.com/uc?export=download&id=1M4gWfWwQlBGKXAtJJhLClCQNqm6Wmhii" target="_blank" style="color: #ffffff;">here</a>.</p>
+</div>
+  
+
 
   <div class="content" id="contact">
     <h1>Contact</h1>
