--- a/home.html
+++ b/home.html
@@ -421,7 +421,7 @@
     <ul>
       <li><a href="https://www.facebook.com" target="_blank" style="color: #ffffff;">Facebook</a></li>
       <li><a href="https://www.twitter.com" target="_blank" style="color: #ffffff;">Twitter</a></li>
-      <li><a href="https://www.linkedin.com" target="_blank" style="color: #ffffff;">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/jaya-sundar-s-664b6211a/" target="_blank" style="color: #ffffff;">LinkedIn</a></li>
     </ul>
     <p><b>Official College Email:</b> ktm@sxc.edu.np</p>
     <p><b>Official College Website: </b><a href="https://www.sxc.edu.np" target="_blank">ST. XAVIER'S COLLEGE</a></p>
